solved page overflow now fixed

--- a/style.css
+++ b/style.css
@@ -1,19 +1,28 @@
 html{
-    padding: 0rem;
-    margin: 0rem;
-    border: 0rem;
     font-family: 'Roboto', sans-serif;
+    width: auto!important; 
+    overflow-x: hidden!important
 }
+body {
+    width: auto!important; 
+    overflow-x: hidden!important;
+    margin: 0rem;
+    padding: 0rem;
+} 
 
 /* first draft need to refactor code and remove duplicaton*/
 /*not happy with mobile nav menu howver functionality is correct, possoblt a sticky nav menu would be better?*/
 
 /* General Styles */
 .pagecontainer{
-    width: 100%;
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 8(1fr);
+    width: auto!important; 
+    overflow-x: hidden!important;
 }
 
 .landing-page{
@@ -37,7 +46,6 @@ color: #EDEBD7;
 font-size: 2rem;
 color: #EDEBD7;
 }
-
 .introbtn{
     border-radius: 1rem;
     border-style: solid;
@@ -233,9 +241,9 @@ progress[value]::-webkit-progress-value {
       background-size: 35px 20px, 100% 100%, 100% 100%;
 }
 /*end of progress bar*/
-
 /* END OF ABOUT SECTION */
 
+/* PROJECTS SECTION*/
 .projects{
     width: 100%;
     justify-items: center;
@@ -246,8 +254,6 @@ progress[value]::-webkit-progress-value {
     text-align: center;
 }
 
-
-
 /* BLOG SECTION*/
 .blog{
     width: 100%;
@@ -256,7 +262,6 @@ progress[value]::-webkit-progress-value {
     position: relative;
     text-align: center;
 }
-
 .blogcontainer{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -264,7 +269,6 @@ progress[value]::-webkit-progress-value {
     padding: 3rem;
 
 }
-
 .blog1{
     border: 1px solid black;
     min-height: 240px;
@@ -287,7 +291,6 @@ progress[value]::-webkit-progress-value {
 .contactform {
  margin: auto;
 }
-
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
     width: 100%; /* Full width */
@@ -299,7 +302,6 @@ input[type=text], select, textarea {
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
-
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
     background-color: transparent;
@@ -308,12 +310,10 @@ input[type=submit] {
     border-radius: 4px;
     color: #A39594;
 }
-
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
     background-color: #E3B23C;
 }
-
 /* Add a background color and some padding around the form */
 .container {
     border-radius: 5px;
@@ -333,30 +333,32 @@ input[type=submit]:hover {
     color: #EDEBD7;
 
 }
-
 .socialicon{
     padding: 0.25rem;
     background-color: white;
     border-radius: 30px;
     margin: 1rem;
 }
-
 .sidenav{
     display:none;
 }
-
 .floatNavBtn{
     display: none;
 }
  
 
+/* ----------------- MEDIA QUERY MOBILE -----------*/
+
 /*media query phone screens*/
 
 @media only screen and (max-width: 767px) and (orientation: portrait) { 
     .pagecontainer{
-        display: block;
-         margin-top: -2rem;
-         width: 100%
+        margin: 0px;
+        border: 0px;
+        padding: 0px;
+        display: absolute;
+        width: auto!important; 
+        overflow-x: hidden!important;
     }
 
     .intromessage {
